# pico-node

./: .gitignore  Cargo.toml  README.md  parity-exceptions.json  parity-manifest.toml
.github/workflows/: ci.yml  parity.yml
crates/ax25-node-bootloader/: Cargo.toml  build.rs  memory.x
crates/ax25-node-bootloader/.cargo/: config.toml
crates/ax25-node-bootloader/src/: main.rs
crates/ax25-node-core/: Cargo.toml
crates/ax25-node-core/src/: crc.rs  lib.rs
crates/ax25-node-core/src/ax25/: address.rs  callsign.rs  frame.rs  mod.rs  parse_options.rs
crates/ax25-node-core/src/ax25/xid/: classes_of_procedures.rs  hdlc_optional_functions.rs  info_field.rs  mod.rs  parameters.rs  parse_options.rs
crates/ax25-node-core/src/axudp/: mod.rs
crates/ax25-node-core/src/console/: command.rs  connection.rs  line.rs  mod.rs  service.rs
crates/ax25-node-core/src/kiss/: ackmode.rs  classify.rs  decoder.rs  encoder.rs  frame.rs  mod.rs  params.rs  reconnect.rs  serial.rs
crates/ax25-node-core/src/kiss/ninotnc/: airtest.rs  catalog.rs  classify.rs  cqbeep.rs  firmware.rs  mod.rs  rssi.rs  sethw.rs  status.rs  txtest.rs
crates/ax25-node-core/src/netrom/: connector.rs  forwarding.rs  mod.rs  originator.rs
crates/ax25-node-core/src/netrom/routing/: inp3_route_selector.rs  inp3_sntt.rs  mod.rs  model.rs  options.rs  quality.rs  table.rs
crates/ax25-node-core/src/netrom/transport/: circuit.rs  circuit_manager.rs  circuit_options.rs  circuit_state.rs  compression.rs  deflate.rs  inp3_engine.rs  inp3_update_scheduler.rs  mod.rs
crates/ax25-node-core/src/netrom/wire/: broadcast.rs  callsign.rs  codec_tests.rs  connect_ack_info.rs  connect_request_info.rs  entry.rs  inp3_l3rtt.rs  inp3_options.rs  inp3_rif.rs  mod.rs  network_header.rs  nodes_broadcast_builder.rs  options.rs  packet.rs  transport_header.rs
crates/ax25-node-core/src/radio/: mod.rs  rssi_tagging.rs
crates/ax25-node-core/src/radio/tait/: driver.rs  mod.rs  transparent.rs
crates/ax25-node-core/src/radio/tait/ccdi/: checksum.rs  decoder.rs  frame.rs  message.rs  mod.rs
crates/ax25-node-core/src/sdl/: bridge.rs  capability.rs  carrier.rs  context.rs  dispatch.rs  event.rs  guard.rs  harness_tests.rs  loop_exec.rs  manager.rs  mdl.rs  mod.rs  quirks.rs  session.rs  signal.rs  subroutine.rs  tests.rs  timer.rs  tx.rs
crates/ax25-node-core/src/tune/: meter_report.rs  mod.rs  sdm_link.rs  telegram.rs
crates/ax25-node-core/tests/: golden_vectors.rs  xid_golden_vectors.rs
crates/ax25-node-fw/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
crates/ax25-node-fw/.cargo/: config.toml
crates/ax25-node-fw/cyw43-firmware/: README.md
crates/ax25-node-fw/src/: config.rs  config_store.rs  main.rs  mdns.rs  mqtt.rs  net.rs  netrom_store.rs  netrom_view.rs  oled.rs  ota.rs  provisioning.rs  session.rs  webui.rs
crates/ax25-node-fw/src/transports/: axudp.rs  kiss_serial.rs  kiss_tcp.rs  mod.rs  relay.rs  tait_ccdi.rs  telnet.rs
crates/ax25-node-fw/tests/: on_target.rs
docs/: HARDWARE-NINOBLE.md  HW-BRINGUP.md  OTA-RADIO.md  OTA.md  PLAN.md  PROVISIONING.md  ROADMAP.md
parity/: README.md  expected-inventory.json
scripts/: build-blobs.py  check-layout.sh  package-ota.sh  parity-check.mjs  uf2-combine.py
scripts/__fixtures__/: parity-manifest.sample.toml
tools/: axudp-harness.py  kiss-tcp-harness.py
tools/linbpq-container/: Dockerfile  README.md  bpq32.cfg.template
vectors/: ax25-mod8.json  xid.json
