# pico-node OTA bootloader — a tiny RP2040 second-stage that manages the A/B
# firmware partitions (embassy-boot-rp) and chains the active application.
#
# STANDALONE crate, excluded from the workspace (like ax25-node-fw): it targets
# thumbv6m-none-eabi and is built from its own directory. It is flashed ONCE
# (BOOTSEL combined UF2, or probe-rs on the bench); thereafter it swaps in OTA
# updates the app stages into DFU. See docs/OTA.md.
#
# Mirrors the embassy reference bootloader (examples/boot/bootloader/rp): the app
# must NOT link with link-rp.x; the bootloader does (it owns BOOT2).

[package]
name = "ax25-node-bootloader"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/m0lte/pico-node"
description = "OTA A/B bootloader for the pico-node RP2040 firmware (embassy-boot-rp)."
publish = false

[dependencies]
defmt     = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-rp      = { version = "0.10", features = ["rp2040"] }
embassy-boot-rp = { version = "0.10" }
embassy-sync    = { version = "0.8" }
embassy-time    = { version = "0.5" }

cortex-m    = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4"
cfg-if = "1.0"

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]

# A bootloader must be small and is rarely re-flashed: optimise for size, keep
# debuginfo for bench RTT.
[profile.release]
debug = true
opt-level = "s"
lto = true
codegen-units = 1
overflow-checks = false
