# ax25-node-fw — the RP2040 / Pico W firmware binary.
#
# This crate wires `ax25-node-core` (the portable logic) to the silicon: the
# CYW43439 WiFi radio (cyw43 + cyw43-pio), the no-alloc async TCP/IP stack
# (embassy-net), hardware timers (embassy-time), and the UART (embassy-rp) for the
# NinoTNC KISS link. It targets `thumbv6m-none-eabi` and is built/flashed/logged
# with probe-rs (see .cargo/config.toml + docs/PLAN.md §"Hands-free dev cycle").
#
# IMPORTANT: this crate is a STANDALONE crate, deliberately EXCLUDED from the
# parent workspace (see ../../Cargo.toml for why). It does NOT build in the
# current environment — there is no precompiled `core` for thumbv6m (no rustup),
# and the embassy/cyw43/defmt deps below have not been fetched. The dependency
# declarations are PLANNING; building is gated on the toolchain approvals in
# docs/PLAN.md §"Package approval list". Once the toolchain is in place:
#     cargo build --manifest-path crates/ax25-node-fw/Cargo.toml --release
#
# Versions are pinned inline to what the prior research note recorded from the
# embassy `examples/rp` manifest as current for 2026. Verify/refresh them against
# a live `embassy` checkout when first building (the embassy crates move together;
# `cargo update` within the pinned minors is expected at first build).

[package]
name = "ax25-node-fw"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/m0lte/pico-node"
description = "RP2040 / Pico W AX.25 packet-node firmware (Embassy + cyw43 + embassy-net), wiring ax25-node-core to WiFi/UART."
publish = false

[[bin]]
name = "ax25-node-fw"
test = false      # on-target tests run via embedded-test (see PLAN), not `cargo test`
bench = false

[dependencies]
# The portable core, with std OFF — pulls in only core + alloc on the target.
ax25-node-core = { path = "../ax25-node-core", default-features = false, features = ["alloc"] }

# --- Embassy core + RP2040 HAL ---
#
# Versions REFRESHED 2026-06-04 to the current coherent crates.io set (the prior
# planning pins — embassy-rp 0.2 etc. — were stale guesses; e.g. embassy-rp 0.2 has
# no `rp2040` feature, the chip-select features landed later). These match the
# research note §2.3 (cyw43 0.7.x / cyw43-pio 0.10.x / embassy-net 0.9.x). The
# exact feature names should be re-confirmed against the resolved manifest at first
# build (embassy crates move together; a `cargo update` within these minors is
# expected). NOT fetched/built here — gated on Tom approving the embassy network
# build (docs/PLAN.md §8.C) + the hardware tier (the cyw43 bring-up has no emulator).
# NB embassy-executor 0.10 renamed the arch feature `arch-cortex-m` →
# `platform-cortex-m` (confirmed against the resolved manifest 2026-06-04).
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp       = { version = "0.10", default-features = false, features = ["rp2040", "time-driver", "critical-section-impl", "defmt"] }
embassy-time     = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync     = { version = "0.8", default-features = false, features = ["defmt"] }
embassy-futures  = { version = "0.1", default-features = false }

# --- WiFi (CYW43439) over PIO-SPI ---
cyw43     = { version = "0.7", default-features = false, features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10", default-features = false, features = ["defmt"] }

# --- no-alloc async TCP/IP stack (UDP for AXUDP, TCP for KISS + telnet) ---
embassy-net = { version = "0.9", default-features = false, features = ["defmt", "udp", "tcp", "dhcpv4", "proto-ipv4", "medium-ethernet"] }

# Async byte-I/O traits — `embassy_rp::uart::BufferedUart` implements these; the
# KISS-over-serial transport's `ByteStream` impl (transports::kiss_serial) drives the
# NinoTNC UART through them. (Re-exported by embassy-rp, pinned explicitly for the
# direct `Read`/`Write` use.)
embedded-io-async = { version = "0.6", default-features = false }

# --- Cortex-M runtime + logging/diagnostics ---
cortex-m    = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7" }
defmt       = { version = "0.3" }
defmt-rtt   = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2" }

# The RP2040's Cortex-M0+ has NO native atomic compare-exchange. Crates that use
# `AtomicBool::compare_exchange` (static_cell, embassy internals) reach for it via
# `portable-atomic`; enabling its `critical-section` feature here provides a CAS
# implementation built on critical sections (embassy-rp's `critical-section-impl`
# supplies the critical-section backend). Standard RP2040 embedded-Rust config —
# without it the firmware fails to build for thumbv6m (E0277 "requires atomic CAS").
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }

# An embedded global allocator for ax25-node-core's `alloc` buffers. Tiny bump/
# linked-list allocator; declared here (planning) — swap for heapless if the
# follow-up to remove alloc from the core lands first. (Not fetched yet.)
embedded-alloc = "0.7"

# Fixed-capacity collections for the firmware's own bookkeeping (e.g. the expired-
# timer set in session.rs). no_std, no alloc.
heapless = "0.8"

[dev-dependencies]
# On-target test harness (current; defmt-test/probe-run are deprecated). Runs the
# conformance subset on the real M0+ via `probe-rs run` as the cargo test runner.
embedded-test = { version = "0.6", features = ["embassy"] }

# Size matters on a 264 KB-RAM M0+. Optimise even in dev so it fits and the
# defmt/RTT loop is responsive.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2
overflow-checks = true
